add wood texture and readme

--- a/health-tracker.html
+++ b/health-tracker.html
@@ -50,7 +50,9 @@
             appendTransform(clonedDials, " translate(0, 35)");
             dials.parentNode.insertBefore(clonedDials, cover);
 
-            separateComponents();
+            if (new URLSearchParams(window.location.search).has("print")) {
+                separateComponents();
+            }
         }
 
         document.addEventListener('DOMContentLoaded', onReady, false);
@@ -58,6 +60,12 @@
 </head>
 <body>
 <svg viewBox="0 0 210 260">
+    <defs>
+        <pattern id="wood" x="0" y="0" width="1" height="1"
+                viewBox="0 0 861 574" preserveAspectRatio="xMidYMid slice">
+            <image xlink:href="old-wood-structure-861x574.jpg"/>
+        </pattern>
+    </defs>
     <style>
         circle {
             fill: none;
@@ -66,7 +74,7 @@
         }
 
         .back path, .cover path {
-            fill: #fffffff0;
+            fill-opacity: 0.2;
             stroke: black;
             stroke-width: 0.1;
         }
@@ -79,7 +87,7 @@
     </style>
     <g class="root">
         <g class="back" transform="translate(2, 103)">
-            <path fill-rule="evenodd" d="
+            <path fill="url(#wood)" fill-rule="evenodd" d="
                 M 16,9
                 l 116.5,0 l 7,7
                 l 0,11 q -6,15 0,30 l 0,5 q -6,15 0,30 l 0,11
@@ -109,7 +117,7 @@
             </g>
         </g>
         <g class="cover" transform="translate(2, 2)">
-            <path fill-rule="evenodd" d="
+            <path fill="url(#wood)" fill-rule="evenodd" d="
                 M 16,9
                 l 116.5,0 l 7,7
                 l 0,11 q -6,15 0,30 l 0,5 q -6,15 0,30 l 0,11
