--- a/health-tracker.html
+++ b/health-tracker.html
@@ -65,6 +65,10 @@
                 viewBox="0 0 861 574" preserveAspectRatio="xMidYMid slice">
             <image xlink:href="old-wood-structure-861x574.jpg"/>
         </pattern>
+        <pattern id="wood2" x="0" y="0" width="1" height="1" patternTransform="translate(0,18) scale(1,-1)"
+                viewBox="0 0 861 574" preserveAspectRatio="xMidYMid slice">
+            <image xlink:href="old-wood-structure-861x574.jpg"/>
+        </pattern>
     </defs>
     <style>
         circle {
@@ -74,7 +78,7 @@
         }
 
         .back path, .cover path {
-            fill-opacity: 0.2;
+            fill-opacity: 0.3;
             stroke: black;
             stroke-width: 0.1;
         }
@@ -87,7 +91,7 @@
     </style>
     <g class="root">
         <g class="back" transform="translate(2, 103)">
-            <path fill="url(#wood)" fill-rule="evenodd" d="
+            <path fill="url(#wood2)" fill-rule="evenodd" d="
                 M 16,9
                 l 116.5,0 l 7,7
                 l 0,11 q -6,15 0,30 l 0,5 q -6,15 0,30 l 0,11
