--- a/health-tracker.html
+++ b/health-tracker.html
@@ -61,12 +61,15 @@
 <body>
 <svg viewBox="0 0 210 260">
     <defs>
-        <pattern id="wood" x="0" y="0" width="1" height="1"
-                viewBox="0 0 861 574" preserveAspectRatio="xMidYMid slice">
+        <pattern id="wood" width="1" height="1"
+                viewBox="0 0 861 574"
+                preserveAspectRatio="xMidYMid slice">
             <image xlink:href="old-wood-structure-861x574.jpg"/>
         </pattern>
-        <pattern id="wood2" x="0" y="0" width="1" height="1" patternTransform="translate(0,18) scale(1,-1)"
-                viewBox="0 0 861 574" preserveAspectRatio="xMidYMid slice">
+        <pattern id="wood2" width="1" height="1"
+                patternTransform="translate(0,18) scale(1,-1)"
+                viewBox="0 0 861 574"
+                preserveAspectRatio="xMidYMid slice">
             <image xlink:href="old-wood-structure-861x574.jpg"/>
         </pattern>
     </defs>
